# kwento

./: .gitignore  README.md  zip_script.py
backend/: README.md  pyproject.toml  requirements.txt  test_scratch_3.py  zip_script.py
backend/gs-config/: cors-config.json
backend/scripts/: assign_uuid_to_existing_books.py  audit_gcs_book_json_compliance.py  backfill_missing_gcs_covers.py  delete_books_from_gcs.py  export_gcs_book_file_metadata.py  resize_gcs_covers.py  sample_illustration_style_selection.py
backend/src/: config.py  main.py  requirements.txt
backend/src/api/models/: book_models.py  helpers.py
backend/src/api/routers/: books.py
backend/src/core/: content_generation.py  generation_errors.py  image_generation.py  progress_estimation.py
backend/src/core/prompts/: prompts.py  prompts_v2.py
backend/src/kwento_backend/: config.py  main.py
backend/src/kwento_backend/core/: content_generation.py  image_generation.py
backend/src/services/: image_generation_provider.py  image_service.py  openai_service.py  text_generation_provider.py
backend/src/utils/: book_utils.py  general_utils.py
backend/tests/core/: test_content_generation.py  test_image_generation.py  test_image_generation_strategy.py
backend/tests/integration/: test_full_flow.py
backend/tests/scripts/: test_audit_gcs_book_json_compliance.py  test_backfill_missing_gcs_covers.py
backend/tests/services/: test_general_utils_gcs_client.py  test_image_generation_provider.py  test_image_service.py  test_openai_service.py  test_text_generation_provider.py
frontend/: README.md  (+1 more)
(+28 files in other folders)
