[tool.poetry]
name = "kwento-backend"
version = "0.1.0"
description = ""
authors = ["iank <ian@kintosllc.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.4"
uvicorn = "^0.32.0"
pydantic = "<2.0"
openai = "^1.53.0"
python-dotenv = "^1.0.1"
pillow = "^11.0.0"
requests = "^2.32.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
